# pyproject.toml: contains most project, build, linting, formatting and ci configuration

######################################################################################################
# PROJECT CONFIG
######################################################################################################

[project]
name = "vane-ai"
version = "0.1.0a1"
description = "A distributed, multimodal data engine built on DuckDB and Ray"
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "NOTICE",
    "LICENSES/*.txt",
    "duckdb/experimental/spark/LICENSE",
    "external/duckdb/LICENSE",
    "external/duckdb/src/include/duckdb/storage/compression/alp/algorithm/LICENSE",
    "external/duckdb/src/include/duckdb/storage/compression/alprd/algorithm/LICENSE",
    "external/duckdb/third_party/*/LICENSE",
    "external/duckdb/third_party/tdigest/NOTICES",
    "external/duckdb/third_party/thrift/thrift/LICENSE",
    "external/duckdb/extension/icu/third_party/icu/LICENSE",
    "external/duckdb/extension/jemalloc/jemalloc/LICENSE",
]
keywords = ["Vane", "DuckDB", "Ray", "Distributed", "Database", "SQL", "OLAP"]
requires-python = ">=3.10,<3.15"
dependencies = [
    "cloudpickle>=3.1.2,<4",
    "numpy",
    "pyarrow",
    "ray>=2.53.0,<3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
]
authors = [{name = "Vane contributors"}]
maintainers = [{name = "Vane maintainers"}]

[project.urls]
Documentation = "https://github.com/AstroVela/vane#readme"
Source = "https://github.com/AstroVela/vane"
Issues = "https://github.com/AstroVela/vane/issues"
Changelog = "https://github.com/AstroVela/vane/releases"

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
google = ["google-genai"]
transformers = [
    "sentence-transformers",
    "torch",
    "transformers",
]
vllm = [
    "vllm; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
all = [ # Cloud providers and dataframe/filesystem integrations; local model runtimes stay opt-in.
    "anthropic",
    "google-genai",
    "ipython", # used in query_graph
    "fsspec",  # used in filesystem support
    "openai",
    "pandas",  # used for pandas dataframes
    "adbc-driver-manager", # for the adbc driver
]

######################################################################################################
# BUILD CONFIG
#
# Includes config used for building wheels, sdists and for installing
# Tools: scikit-build-core and cmake
######################################################################################################

[build-system]
build-backend = "build_backend"
backend-path = ["."]
requires = [
    "scikit-build-core>=0.11.4",
	"pybind11[global]>=3.0.0",
]

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.29.0"
ninja.version = ">=1.10"
ninja.make-fallback = false

[tool.scikit-build.wheel]
cmake = true
packages.duckdb = "duckdb"
packages.vane = "vane"
packages.adbc_driver_duckdb = "adbc_driver_duckdb"
packages._duckdb-stubs = "_duckdb-stubs"
exclude = [
    # Runtime shuffle data can live under the Python package during local runs.
    "vane/session_*/",
]

[tool.scikit-build.cmake.define]
BUILD_EXTENSIONS = "core_functions;json;parquet;icu;jemalloc;httpfs"
# Source archives have no Git metadata. This preserves DuckDB's human-readable
# version line; source archives receive the exact generated DUCKDB_SOURCE_ID.
OVERRIDE_GIT_DESCRIBE = "v1.5.0-2-g55abe0cb9e"

# Override: if COVERAGE is set then:
# - we create a RelWithDebInfo build
# - we make sure we use a persistent build dir so we get access to the .gcda files
# - we build the extension with --coverage
# note: unity builds should be enabled to speeds things up (and use significantly less space)
[[tool.scikit-build.overrides]]
if.env.COVERAGE = true
cmake.build-type = "RelWithDebInfo"
build-dir  = "build/coverage/"

# Separate override because we have to append to cmake.define with `inherit` in order not to overwrite other defines.
#   see https://scikit-build-core.readthedocs.io/en/latest/configuration/overrides.html#inheriting-for-tables-and-arrays
[[tool.scikit-build.overrides]]
if.env.COVERAGE = true
inherit.cmake.define = "append"
cmake.define.CMAKE_CXX_FLAGS = "--coverage -O0"
cmake.define.CMAKE_C_FLAGS = "--coverage -O0"
cmake.define.CMAKE_SHARED_LINKER_FLAGS = "--coverage"

# Override: if we're in editable mode then make sure a build dir is set. Note that COVERAGE runs have their own
#   build-dir, and we don't want to interfere with that. We're also disabling unity builds to help with debugging.
[[tool.scikit-build.overrides]]
if.state = "editable"
if.env.COVERAGE = false
build-dir = "build/debug/"
editable.rebuild = true
editable.mode = "redirect"
cmake.build-type = "Debug"

# Separate override because we have to append to cmake.define with `inherit` in order not to overwrite other defines.
#   see https://scikit-build-core.readthedocs.io/en/latest/configuration/overrides.html#inheriting-for-tables-and-arrays
[[tool.scikit-build.overrides]]
if.state = "editable"
if.env.COVERAGE = false
inherit.cmake.define = "append"
cmake.define.DISABLE_UNITY = "1"

[tool.scikit-build.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/NOTICE",
    "/LICENSES/**",
    "/THIRD_PARTY.md",
    "/SOURCE_PROVENANCE.md",
    "/SECURITY.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/CHANGELOG.md",
    "/DEVELOPMENT.md",
    "/GOVERNANCE.md",
    "/MAINTAINERS.md",
    "/RELEASE.md",
    "/ROADMAP.md",
    "/DUCKDB_SOURCE_ID",

    # Build configuration
    "/build_backend.py",
    "/pyproject.toml",
    "/CMakeLists.txt",
    "/vcpkg.json",
    "/scripts/bootstrap_manylinux_bison.sh",
    "/scripts/bootstrap_vcpkg.sh",
    "cmake/**",
    "/scripts/check_release_artifacts.py",
    "/scripts/run_release_tests.sh",
    "/scripts/sync_duckdb_source_id.py",
    "/scripts/sync_vcpkg_licenses.py",
    "/scripts/verify_base_install.py",

    # Curated base-installation release gate. The larger inherited test tree
    # stays in the repository and is intentionally not part of the PyPI sdist.
    "/tests/conftest.py",
    "/tests/ray_test_profile.py",
    "/tests/fast/test_package_metadata.py",
    "/tests/fast/test_ray_test_profile.py",
    "/tests/fast/test_transformers_provider_security.py",
    "/tests/fast/test_vane_config.py",
    "/tests/fast/test_expression_udf_contracts.py",
    "/tests/fast/test_local_e2e.py",
    "/tests/fast/test_ray_cpp_bindings.py",
    "/tests/fast/test_ray_result_contract.py",
    "/tests/fast/test_fte_production_readiness.py",
    "/multimodal_inference_benchmarks/check_fte_production_readiness.py",

    # Source code and stubs
    "src/**",
    "duckdb/**",
    "vane/**",
    "adbc_driver_duckdb/**",
    "_duckdb-stubs/*.pyi",

    # -------------- DuckDB subtree includes
    # Core DuckDB source and build system
    "external/duckdb/LICENSE",
    "external/duckdb/src/**",
    "external/duckdb/CMakeLists.txt",
    "external/duckdb/DuckDBConfig.cmake.in",
    "external/duckdb/DuckDBConfigVersion.cmake.in",

    # DuckDB third-party code needed by the core and selected extensions.
    # Keep this as a positive allowlist: TPC-H, TPC-DS and tpce-tool have
    # additional redistribution terms and must never enter release artifacts.
    "external/duckdb/third_party/brotli/**",
    "external/duckdb/third_party/concurrentqueue/**",
    "external/duckdb/third_party/fast_float/**",
    "external/duckdb/third_party/fastpforlib/**",
    "external/duckdb/third_party/fmt/**",
    "external/duckdb/third_party/fsst/**",
    "external/duckdb/third_party/httplib/**",
    "external/duckdb/third_party/hyperloglog/**",
    "external/duckdb/third_party/jaro_winkler/**",
    "external/duckdb/third_party/libpg_query/**",
    "external/duckdb/third_party/lz4/**",
    "external/duckdb/third_party/mbedtls/**",
    "external/duckdb/third_party/miniz/**",
    "external/duckdb/third_party/parquet/**",
    "external/duckdb/third_party/pcg/**",
    "external/duckdb/third_party/pdqsort/**",
    "external/duckdb/third_party/re2/**",
    "external/duckdb/third_party/ska_sort/**",
    "external/duckdb/third_party/skiplist/**",
    "external/duckdb/third_party/snappy/**",
    # PEP 639 metadata declares this file through project.license-files even
    # though snowball itself is not part of the curated build source allowlist.
    "external/duckdb/third_party/snowball/LICENSE",
    "external/duckdb/third_party/tdigest/**",
    "external/duckdb/third_party/thrift/**",
    "external/duckdb/third_party/utf8proc/**",
    "external/duckdb/third_party/vergesort/**",
    "external/duckdb/third_party/yyjson/**",
    "external/duckdb/third_party/zstd/**",

    # Only the extensions statically linked into vane-ai.
    "external/duckdb/extension/CMakeLists.txt",
    "external/duckdb/extension/extension_build_tools.cmake",
    "external/duckdb/extension/extension_config.cmake",
    "external/duckdb/extension/generated_extension_headers.hpp.in",
    "external/duckdb/extension/generated_extension_loader.cpp.in",
    "external/duckdb/extension/loader/**",
    "external/duckdb/extension/core_functions/**",
    "external/duckdb/extension/icu/**",
    "external/duckdb/extension/jemalloc/**",
    "external/duckdb/extension/json/**",
    "external/duckdb/extension/parquet/**",

    # Can't avoid including a small subset of ./tools and ./.github
    "external/duckdb/tools/CMakeLists.txt",
    "external/duckdb/tools/utils/test_platform.cpp",
    "external/duckdb/.github/config/extensions/httpfs.cmake",
    "external/duckdb/scripts/append_metadata.cmake",
    "external/duckdb/scripts/null.txt",

    # scikit-build-core lets include rules take precedence over exclude rules.
    # Keep these negations here so broad package includes do not ship local caches.
    "!/.venv*/",
    "!/.venv*/**",
    "!/build/",
    "!/build/**",
    "!/dist/",
    "!/dist/**",
    "!/vcpkg_installed/",
    "!/vcpkg_installed/**",
    "!/vane/session_*/",
    "!/vane/session_*/**",
    "!/.pytest_cache/",
    "!/.pytest_cache/**",
    "!/.mypy_cache/",
    "!/.mypy_cache/**",
    "!/.ruff_cache/",
    "!/.ruff_cache/**",
    "!**/__pycache__/",
    "!**/__pycache__/**",
    "!**/*.pyc",
    "!**/*.pyo",
    "!**/*$py.class",
]
exclude = [
    "/*",
    "/.*",

    # Keep broad package includes from pulling local build/runtime artifacts into sdists.
    "/.venv*/**",
    "/build/**",
    "/dist/**",
    "/vcpkg_installed/**",
    "/vane/session_*/**",
    "/.pytest_cache/**",
    "/.mypy_cache/**",
    "/.ruff_cache/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
    "**/*$py.class",
]

######################################################################################################
# TEST AND DEV DEPENDENCY CONFIG
#
# !!! HERE BE (CI) DRAGONS !!!
#
# This section has dependency groups for testing and development. Tread carefully, the current setup makes sure that
# test dependencies can be installed on as many platforms we build wheel for. Especially picky are:
# - tensorflow: we can only run tests on cp310-cp311, for osx there is no tensorflow-cpu, for windows we need
#          tensorflow-cpu-aws and there is no distribution availalbe for Linux aarch64.
# - torch: since we can't use gpu acceleration, we need to rely on torch-cpu, which isn't available on pypi. We use
#          `tool.uv.index` and `tool.uv.sources` to make sure the official pytorch index is used.
# - numpy: tensorflow doesn't play nice with numpy>2 so for every platform that can run tensorflow (cp310-cp311) we use
#          numpy<2. Python 3.12 uses numpy>=2 because numpy<2 does not provide cp312 wheels. For Windows arm64, where
#          tensorflow is unavailable, we only allow numpy>=2.3 because that ships arm64 win32 wheels.
######################################################################################################

[tool.uv]
default-groups = ["dev"]
# `tool.uv.environments` and `tool.uv.required-environments` are used for dependency resolving. These settings should
# make sure that all test and dev dependencies can be resolved on these platforms, which are all platforms we currently
# build wheels for.
# See https://docs.astral.sh/uv/concepts/resolution/#universal-resolution
environments = [ # no need to resolve packages beyond these platforms with uv...
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "python_version >= '3.11' and python_version < '3.15' and sys_platform == 'win32' and platform_machine == 'ARM64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'linux' and platform_machine == 'aarch64'",
]
required-environments = [ # ... but do always resolve for all of them
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "python_version >= '3.11' and python_version < '3.15' and sys_platform == 'win32' and platform_machine == 'ARM64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "python_version >= '3.10' and python_version < '3.15' and sys_platform == 'linux' and platform_machine == 'aarch64'",
]

# We just need pytorch for tests, wihtout GPU acceleration. PyPI doesn't host a cpu-only version for Linux, so we have
# to configure the index url for cpu-only pytorch manually
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [ { index = "pytorch-cpu" } ]
torchvision = [ { index = "pytorch-cpu" } ]

# todo: adjust for windows arm64 while test dependencies become available
[dependency-groups] # used for development only, requires pip >=25.1.0
stubdeps = [ # dependencies used for typehints in the stubs
    "pybind11-stubgen",
    "mypy",
    "fsspec",
    "pandas",
    "polars",
    "pyarrow; sys_platform != 'win32' or platform_machine != 'ARM64'",
    "typing-extensions",
]
test = [ # dependencies used for running tests
    "adbc-driver-manager>=1.10.0; python_version >= '3.10' and (sys_platform != 'win32' or platform_machine != 'ARM64')",
    "adbc-driver-manager>=1.7.0; python_version < '3.10' and (sys_platform != 'win32' or platform_machine != 'ARM64')",
    "pytest",
    "pytest-reraise",
    "pytest-timeout",
    "pytest-timestamper",
    "coverage",
    "gcovr",
    "gcsfs; sys_platform != 'win32' or platform_machine != 'ARM64'",
    "packaging",
    "polars",
    "psutil",
    "py4j",
    "pyotp",
    "pyspark",
    "pytz",
    "requests",
    "urllib3",
    "fsspec>=2022.11.0; sys_platform != 'win32' or platform_machine != 'ARM64'",
    "pandas>=3.0.0; python_version > '3.10'",
    "pandas<3.0.0; python_version < '3.11'",
    "pyarrow>=23.0.0; python_version >= '3.10' and (sys_platform != 'win32' or platform_machine != 'ARM64')",
    "pyarrow>=18.0.0; python_version < '3.10' and (sys_platform != 'win32' or platform_machine != 'ARM64')",
    "torch>=2.2.2; sys_platform != 'win32' or platform_machine != 'ARM64' or python_version > '3.11'",
    "tensorflow==2.14.0; sys_platform == 'darwin' and python_version < '3.12'",
    "tensorflow-cpu>=2.14.0; sys_platform == 'linux' and platform_machine != 'aarch64' and python_version < '3.12'",
    "tensorflow-cpu>=2.14.0; sys_platform == 'win32' and platform_machine != 'ARM64' and python_version < '3.12'",
    "tensorflow-cpu-aws==2.15.1; sys_platform == 'linux' and platform_machine == 'aarch64' and python_version < '3.12'",
    "typing-extensions",
    "numpy<2; ( sys_platform != 'win32' or platform_machine != 'ARM64' ) and python_version < '3.12'",
    "numpy>=2; ( sys_platform != 'win32' or platform_machine != 'ARM64' ) and python_version >= '3.12'",
    "numpy>=2.3; sys_platform == 'win32' and platform_machine == 'ARM64' and python_version >= '3.11'",
]
scripts = [ # dependencies used for running scripts
    "cxxheaderparser",
    "ipython",
    "ipywidgets",
    "numpy",
    "pandas",
    "pcpp",
    "polars",
    "pyarrow; sys_platform != 'win32' or platform_machine != 'ARM64'",
    "pytz"
]
pypi = [ # dependencies used by the pypi cleanup script
    "pyotp>=2.9.0",
    "requests>=2.32.4",
]
build = [
    "cmake>=3.29.0",
    "ninja>=1.10",
    "pybind11[global]>=3.0.0",
    "scikit_build_core>=0.11.4",
    "tomli>=1.1; python_version < '3.11'",
]
dev = [ # tooling like uv will install this automatically when syncing the environment
    "pre-commit",
    "mypy",
    "ruff>=0.13.0",
    {include-group = "stubdeps"},
    {include-group = "build"},
    {include-group = "test"},
    {include-group = "scripts"},
]

######################################################################################################
# DEV CONFIG
#
# Config for testig, coverage, linting and formatting
#
# Tools:
# - mypy: Static type checking for Python
# - ruff: Python linter and code formatter
# - coverage.py: Code coverage (Python and C++)
# - pytest
######################################################################################################

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --verbose -m 'not external_service'"
testpaths = ["tests"]
pythonpath = ["tests", "tests/fast"]
markers = [
    "external_service: tests that require an externally provisioned service",
    "real_ray: tests that connect to or own a real Ray runtime",
    "ray_cluster_owner: tests that must own a Ray cluster in an isolated pytest process",
    "ray_fault: tests that intentionally kill or restart Ray runtime components",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # Jupyter is throwing DeprecationWarnings
    "ignore:function ham() is deprecated:DeprecationWarning",
    # Pyspark is throwing these warnings
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:is_datetime64tz_dtype is deprecated:DeprecationWarning",
]

[tool.mypy]
packages = ["duckdb", "_duckdb"]
strict = true
warn_unreachable = true
pretty = true
python_version = "3.10"
exclude = [
    "duckdb/experimental/", # not checking the pyspark API
    "duckdb/query_graph/",  # old and unmaintained (should probably remove)
    "tests", "scripts",
]

[[tool.mypy.overrides]]
module = "duckdb.experimental.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "fsspec.*",
    "pandas",
    "polars",
    "pyarrow.*",
    "ray",
    "ray.*",
    "torch",
    "tensorflow",
    "vllm",
    "vllm.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "duckdb.filesystem"
disallow_subclassing_any = false

[tool.coverage.run]
branch = true
source = ["duckdb"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
fix = true
exclude = ['external/duckdb', 'sqllogic']

[tool.ruff.lint]
fixable = ["ALL"]
exclude = ['*.pyi']
select = [
    "E4", # import and indentation errors
    "E7", # statement errors
    "E9", # syntax and runtime errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    # The imported DuckDB Python tree intentionally performs several imports
    # after runtime environment setup. Track this legacy pattern separately.
    "E402",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"duckdb/experimental/spark/**.py" = [
    # No need for moduledocstrings for spark
    'D100',
    # Ignore boolean positional args in the Spark API
    'FBT001'
]
"tests/**.py" = [
    # No need for package, module, class, function, init etc docstrings in tests
    'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D107',
    # No need for type hinting in tests
    'ANN001', 'ANN201', 'ANN202'
]
"tests/fast/spark/**.py" = [
    "E402"
]
"tests/spark_namespace/**.py" = [
    # we need * imports for Spark
    'F403'
]
"scripts/**.py" = [
    # No need for package, module, class, function, init etc docstrings in scripts
    'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D107', 'D205',
    # No need for type hinting in scripts
    'ANN001', 'ANN201'
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "double"
indent-style = "space"

######################################################################################################
# CI CONFIG
#
# Configuration for CI Workflows. Specified here instead of in the workflow yamls so you can use `cibuildwheel` locally
# (to some extent).
######################################################################################################
[tool.cibuildwheel]
archs = ["x86_64"]
build = "cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64 cp313-manylinux_x86_64 cp314-manylinux_x86_64"
build-frontend = "build[uv]"
build-verbosity = 1
manylinux-x86_64-image = "manylinux_2_28"
skip = "*-musllinux*"
test-command = "env -u VANE_RUNNER python {project}/scripts/verify_base_install.py"
test-requires = [
    "cloudpickle>=3.1.2,<4",
    "numpy",
    "pyarrow",
    "ray>=2.53.0,<3",
]

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y autoconf automake bison ccache curl flex git libtool make perl pkgconfig tar unzip which zip",
    # AlmaLinux 8 ships Bison 3.0.4, while Thrift 0.23 requires --file-prefix-map.
    "bash {package}/scripts/bootstrap_manylinux_bison.sh",
    "bash {package}/scripts/bootstrap_vcpkg.sh {package}",
]
